--- a/appiumtest/test-output/index.html
+++ b/appiumtest/test-output/index.html
@@ -102,27 +102,32 @@
                     <div class="method-list-content passed suite-Suite1">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="addExpanseAsIncomeAndVerifyThem">addExpanseAsIncomeAndVerifyThem</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="VerifyAppLaunchesSuccessfully">VerifyAppLaunchesSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="addSalaryAsIncomeAndVerifyThem">addSalaryAsIncomeAndVerifyThem</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyAddExpenseFeature">verifyAddExpenseFeature</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyAddExpansePage">verifyAddExpansePage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyAddExpenseScreen">verifyAddExpenseScreen</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyCategoriesList">verifyCategoriesList</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyAddIncomeFeature">verifyAddIncomeFeature</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyExpanseCategories">verifyExpanseCategories</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyAddIncomeScreen">verifyAddIncomeScreen</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyCategoriesModal">verifyCategoriesModal</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -132,22 +137,17 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyHomePageAfterLunchApp">verifyHomePageAfterLunchApp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifySelectAnyDateRangeToShowDataMessage">verifySelectAnyDateRangeToShowDataMessage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyIncomePage">verifyIncomePage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyTheExpenseCategoryScreenTitle">verifyTheExpenseCategoryScreenTitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifySalaryPage">verifySalaryPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.ExpenseTests" hash-for-method="verifyTravelCategories">verifyTravelCategories</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite1" title="tests.IncomeTests" hash-for-method="verifyTheIncomeCategoryScreenTitle">verifyTheIncomeCategoryScreenTitle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite1 -->
@@ -170,37 +170,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addSalaryAsIncomeAndVerifyThem">
-                  </a> <!-- addSalaryAsIncomeAndVerifyThem -->
-                  <span class="method-name">addSalaryAsIncomeAndVerifyThem</span>
+                  <a name="VerifyAppLaunchesSuccessfully">
+                  </a> <!-- VerifyAppLaunchesSuccessfully -->
+                  <span class="method-name">VerifyAppLaunchesSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyCategoriesList">
-                  </a> <!-- verifyCategoriesList -->
-                  <span class="method-name">verifyCategoriesList</span>
+                  <a name="verifyAddIncomeFeature">
+                  </a> <!-- verifyAddIncomeFeature -->
+                  <span class="method-name">verifyAddIncomeFeature</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyHomePageAfterLunchApp">
-                  </a> <!-- verifyHomePageAfterLunchApp -->
-                  <span class="method-name">verifyHomePageAfterLunchApp</span>
+                  <a name="verifyAddIncomeScreen">
+                  </a> <!-- verifyAddIncomeScreen -->
+                  <span class="method-name">verifyAddIncomeScreen</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyIncomePage">
-                  </a> <!-- verifyIncomePage -->
-                  <span class="method-name">verifyIncomePage</span>
+                  <a name="verifyCategoriesModal">
+                  </a> <!-- verifyCategoriesModal -->
+                  <span class="method-name">verifyCategoriesModal</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifySalaryPage">
-                  </a> <!-- verifySalaryPage -->
-                  <span class="method-name">verifySalaryPage</span>
+                  <a name="verifyTheIncomeCategoryScreenTitle">
+                  </a> <!-- verifyTheIncomeCategoryScreenTitle -->
+                  <span class="method-name">verifyTheIncomeCategoryScreenTitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -213,23 +213,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addExpanseAsIncomeAndVerifyThem">
-                  </a> <!-- addExpanseAsIncomeAndVerifyThem -->
-                  <span class="method-name">addExpanseAsIncomeAndVerifyThem</span>
+                  <a name="verifyAddExpenseFeature">
+                  </a> <!-- verifyAddExpenseFeature -->
+                  <span class="method-name">verifyAddExpenseFeature</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAddExpansePage">
-                  </a> <!-- verifyAddExpansePage -->
-                  <span class="method-name">verifyAddExpansePage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyExpanseCategories">
-                  </a> <!-- verifyExpanseCategories -->
-                  <span class="method-name">verifyExpanseCategories</span>
+                  <a name="verifyAddExpenseScreen">
+                  </a> <!-- verifyAddExpenseScreen -->
+                  <span class="method-name">verifyAddExpenseScreen</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -241,9 +234,16 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyTravelCategories">
-                  </a> <!-- verifyTravelCategories -->
-                  <span class="method-name">verifyTravelCategories</span>
+                  <a name="verifySelectAnyDateRangeToShowDataMessage">
+                  </a> <!-- verifySelectAnyDateRangeToShowDataMessage -->
+                  <span class="method-name">verifySelectAnyDateRangeToShowDataMessage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyTheExpenseCategoryScreenTitle">
+                  </a> <!-- verifyTheExpenseCategoryScreenTitle -->
+                  <span class="method-name">verifyTheExpenseCategoryScreenTitle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -313,50 +313,50 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(10);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'addExpanseAsIncomeAndVerifyThem')
+data.setCell(0, 1, 'verifyAddExpenseFeature')
 data.setCell(0, 2, 'tests.ExpenseTests')
-data.setCell(0, 3, 8835);
+data.setCell(0, 3, 8907);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'addSalaryAsIncomeAndVerifyThem')
+data.setCell(1, 1, 'verifyAddIncomeFeature')
 data.setCell(1, 2, 'tests.IncomeTests')
-data.setCell(1, 3, 8703);
+data.setCell(1, 3, 8836);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyExpanseCategories')
+data.setCell(2, 1, 'verifyTheExpenseCategoryScreenTitle')
 data.setCell(2, 2, 'tests.ExpenseTests')
-data.setCell(2, 3, 3321);
+data.setCell(2, 3, 4287);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyCategoriesList')
+data.setCell(3, 1, 'verifyCategoriesModal')
 data.setCell(3, 2, 'tests.IncomeTests')
-data.setCell(3, 3, 3316);
+data.setCell(3, 3, 3348);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAddExpansePage')
+data.setCell(4, 1, 'verifySelectAnyDateRangeToShowDataMessage')
 data.setCell(4, 2, 'tests.ExpenseTests')
-data.setCell(4, 3, 1166);
+data.setCell(4, 3, 1378);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifySalaryPage')
-data.setCell(5, 2, 'tests.IncomeTests')
-data.setCell(5, 3, 1101);
+data.setCell(5, 1, 'verifyAddExpenseScreen')
+data.setCell(5, 2, 'tests.ExpenseTests')
+data.setCell(5, 3, 1253);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyTravelCategories')
-data.setCell(6, 2, 'tests.ExpenseTests')
-data.setCell(6, 3, 1054);
+data.setCell(6, 1, 'verifyAddIncomeScreen')
+data.setCell(6, 2, 'tests.IncomeTests')
+data.setCell(6, 3, 1144);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyIncomePage')
+data.setCell(7, 1, 'verifyTheIncomeCategoryScreenTitle')
 data.setCell(7, 2, 'tests.IncomeTests')
-data.setCell(7, 3, 1027);
+data.setCell(7, 3, 1037);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'verifyHomePageAfterAddedExpense')
 data.setCell(8, 2, 'tests.ExpenseTests')
-data.setCell(8, 3, 230);
+data.setCell(8, 3, 258);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'verifyHomePageAfterLunchApp')
+data.setCell(9, 1, 'VerifyAppLaunchesSuccessfully')
 data.setCell(9, 2, 'tests.IncomeTests')
-data.setCell(9, 3, 135);
+data.setCell(9, 3, 128);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -388,59 +388,59 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyHomePageAfterLunchApp</span>
-                <span class="method-start">21621 ms</span>
+                <span class="method-name">VerifyAppLaunchesSuccessfully</span>
+                <span class="method-start">19990 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyCategoriesList</span>
-                <span class="method-start">21777 ms</span>
+                <span class="method-name">verifyCategoriesModal</span>
+                <span class="method-start">20151 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyIncomePage</span>
-                <span class="method-start">25097 ms</span>
+                <span class="method-name">verifyTheIncomeCategoryScreenTitle</span>
+                <span class="method-start">23508 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifySalaryPage</span>
-                <span class="method-start">26127 ms</span>
+                <span class="method-name">verifyAddIncomeScreen</span>
+                <span class="method-start">24548 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">addSalaryAsIncomeAndVerifyThem</span>
-                <span class="method-start">27231 ms</span>
+                <span class="method-name">verifyAddIncomeFeature</span>
+                <span class="method-start">25696 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">35937 ms</span>
+                <span class="method-start">34534 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">tests.ExpenseTests</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">37524 ms</span>
+                <span class="method-start">35835 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyExpanseCategories</span>
-                <span class="method-start">56395 ms</span>
+                <span class="method-name">verifyTheExpenseCategoryScreenTitle</span>
+                <span class="method-start">53136 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyTravelCategories</span>
-                <span class="method-start">59720 ms</span>
+                <span class="method-name">verifyAddExpenseScreen</span>
+                <span class="method-start">57427 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">verifyAddExpansePage</span>
-                <span class="method-start">60777 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">addExpanseAsIncomeAndVerifyThem</span>
-                <span class="method-start">61945 ms</span>
+                <span class="method-name">verifyAddExpenseFeature</span>
+                <span class="method-start">58685 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyHomePageAfterAddedExpense</span>
-                <span class="method-start">70783 ms</span>
+                <span class="method-start">67594 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifySelectAnyDateRangeToShowDataMessage</span>
+                <span class="method-start">67854 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">71015 ms</span>
+                <span class="method-start">69235 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
