--- a/appiumtest/test-output/old/Default suite/methods-not-run.html
+++ b/appiumtest/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tests.ExpenseTests.verifyHomePageAfterAddedExpense</td></tr>
+<tr><td>tests.ExpenseTests.verifyTheExpenseCategoryScreenTitle</td></tr>
+<tr><td>tests.ExpenseTests.verifyAddExpenseFeature</td></tr>
+<tr><td>tests.ExpenseTests.verifyAddExpenseScreen</td></tr>
 </table>
