--- a/appiumtest/test-output/old/Suite1/classes.html
+++ b/appiumtest/test-output/old/Suite1/classes.html
@@ -11,23 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addSalaryAsIncomeAndVerifyThem</td>
+<td>verifyTheIncomeCategoryScreenTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCategoriesList</td>
+<td>verifyCategoriesModal</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyIncomePage</td>
+<td>VerifyAppLaunchesSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySalaryPage</td>
+<td>verifyAddIncomeFeature</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHomePageAfterLunchApp</td>
+<td>verifyAddIncomeScreen</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -57,7 +57,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addExpanseAsIncomeAndVerifyThem</td>
+<td>verifyAddExpenseScreen</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -65,15 +65,15 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTravelCategories</td>
+<td>verifyTheExpenseCategoryScreenTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyExpanseCategories</td>
+<td>verifySelectAnyDateRangeToShowDataMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddExpansePage</td>
+<td>verifyAddExpenseFeature</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
