--- a/appiumtest/test-output/old/Default suite/classes.html
+++ b/appiumtest/test-output/old/Default suite/classes.html
@@ -4,30 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.IncomeTests</td>
+<td>tests.ExpenseTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addSalaryAsIncomeAndVerifyThem</td>
+<td>verifyAddExpenseScreen</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCategoriesList</td>
+<td>verifyHomePageAfterAddedExpense</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyIncomePage</td>
+<td>verifyTheExpenseCategoryScreenTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySalaryPage</td>
+<td>verifySelectAnyDateRangeToShowDataMessage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyHomePageAfterLunchApp</td>
+<td>verifyAddExpenseFeature</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
