--- a/appiumtest/test-output/old/Default suite/methods-alphabetical.html
+++ b/appiumtest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.addSalaryAsIncomeAndVerifyThem()[pri:5, instance:tests.IncomeTests@61f8bee4]">addSalaryAsIncomeAndVerifyThem</td> 
-  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:25</td>   <td>-27818</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IncomeTests.setUp()[pri:0, instance:tests.IncomeTests@61f8bee4]">&gt;&gt;setUp</td> 
+<tr bgcolor="6fa38a">  <td>19/05/18 15:53:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExpenseTests.setUp()[pri:0, instance:tests.ExpenseTests@5b87ed94]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:58:01</td>   <td>8922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IncomeTests.tearDown()[pri:0, instance:tests.IncomeTests@61f8bee4]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6fa38a">  <td>19/05/18 15:53:51</td>   <td>22779</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExpenseTests.tearDown()[pri:0, instance:tests.ExpenseTests@5b87ed94]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:47</td>   <td>-5399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyCategoriesList()[pri:2, instance:tests.IncomeTests@61f8bee4]">verifyCategoriesList</td> 
-  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:47</td>   <td>-5582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyHomePageAfterLunchApp()[pri:1, instance:tests.IncomeTests@61f8bee4]">verifyHomePageAfterLunchApp</td> 
-  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:50</td>   <td>-2023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyIncomePage()[pri:3, instance:tests.IncomeTests@61f8bee4]">verifyIncomePage</td> 
-  <td>main@961419791</td>   <td></td> </tr>
-<tr bgcolor="9f99ea">  <td>19/05/17 13:57:51</td>   <td>-1079</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifySalaryPage()[pri:4, instance:tests.IncomeTests@61f8bee4]">verifySalaryPage</td> 
+<tr bgcolor="6fa38a">  <td>19/05/18 15:53:50</td>   <td>21500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifySelectAnyDateRangeToShowDataMessage()[pri:5, instance:tests.ExpenseTests@5b87ed94]">verifySelectAnyDateRangeToShowDataMessage</td> 
   <td>main@961419791</td>   <td></td> </tr>
 </table>
