--- a/appiumtest/test-output/old/Suite1/methods.html
+++ b/appiumtest/test-output/old/Suite1/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IncomeTests.setUp()[pri:0, instance:tests.IncomeTests@43814d18]">&gt;&gt;setUp</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IncomeTests.setUp()[pri:0, instance:tests.IncomeTests@43814d18]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:47</td>   <td>21616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyHomePageAfterLunchApp()[pri:1, instance:tests.IncomeTests@43814d18]">verifyHomePageAfterLunchApp</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:38</td>   <td>19986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.VerifyAppLaunchesSuccessfully()[pri:1, instance:tests.IncomeTests@43814d18]">VerifyAppLaunchesSuccessfully</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:47</td>   <td>21772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyCategoriesList()[pri:2, instance:tests.IncomeTests@43814d18]">verifyCategoriesList</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:38</td>   <td>20146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyCategoriesModal()[pri:2, instance:tests.IncomeTests@43814d18]">verifyCategoriesModal</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:51</td>   <td>25092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyIncomePage()[pri:3, instance:tests.IncomeTests@43814d18]">verifyIncomePage</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:41</td>   <td>23503</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyTheIncomeCategoryScreenTitle()[pri:3, instance:tests.IncomeTests@43814d18]">verifyTheIncomeCategoryScreenTitle</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:52</td>   <td>26122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifySalaryPage()[pri:4, instance:tests.IncomeTests@43814d18]">verifySalaryPage</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:42</td>   <td>24543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyAddIncomeScreen()[pri:4, instance:tests.IncomeTests@43814d18]">verifyAddIncomeScreen</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 13:59:53</td>   <td>27226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.addSalaryAsIncomeAndVerifyThem()[pri:5, instance:tests.IncomeTests@43814d18]">addSalaryAsIncomeAndVerifyThem</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:44</td>   <td>25691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IncomeTests.verifyAddIncomeFeature()[pri:5, instance:tests.IncomeTests@43814d18]">verifyAddIncomeFeature</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/05/17 14:00:01</td>   <td>35933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IncomeTests.tearDown()[pri:0, instance:tests.IncomeTests@43814d18]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a1eaa2">  <td>19/05/18 15:54:52</td>   <td>34529</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IncomeTests.tearDown()[pri:0, instance:tests.IncomeTests@43814d18]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:03</td>   <td>37519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExpenseTests.setUp()[pri:0, instance:tests.ExpenseTests@7c29daf3]">&gt;&gt;setUp</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:54:54</td>   <td>35830</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExpenseTests.setUp()[pri:0, instance:tests.ExpenseTests@7c29daf3]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:22</td>   <td>56390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyExpanseCategories()[pri:1, instance:tests.ExpenseTests@7c29daf3]">verifyExpanseCategories</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:11</td>   <td>53131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyTheExpenseCategoryScreenTitle()[pri:1, instance:tests.ExpenseTests@7c29daf3]">verifyTheExpenseCategoryScreenTitle</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:25</td>   <td>59715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyTravelCategories()[pri:2, instance:tests.ExpenseTests@7c29daf3]">verifyTravelCategories</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:15</td>   <td>57422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyAddExpenseScreen()[pri:2, instance:tests.ExpenseTests@7c29daf3]">verifyAddExpenseScreen</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:26</td>   <td>60772</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyAddExpansePage()[pri:3, instance:tests.ExpenseTests@7c29daf3]">verifyAddExpansePage</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:17</td>   <td>58680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyAddExpenseFeature()[pri:3, instance:tests.ExpenseTests@7c29daf3]">verifyAddExpenseFeature</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:27</td>   <td>61940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.addExpanseAsIncomeAndVerifyThem()[pri:4, instance:tests.ExpenseTests@7c29daf3]">addExpanseAsIncomeAndVerifyThem</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:25</td>   <td>67589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyHomePageAfterAddedExpense()[pri:4, instance:tests.ExpenseTests@7c29daf3]">verifyHomePageAfterAddedExpense</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:36</td>   <td>70778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifyHomePageAfterAddedExpense()[pri:5, instance:tests.ExpenseTests@7c29daf3]">verifyHomePageAfterAddedExpense</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:26</td>   <td>67849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExpenseTests.verifySelectAnyDateRangeToShowDataMessage()[pri:5, instance:tests.ExpenseTests@7c29daf3]">verifySelectAnyDateRangeToShowDataMessage</td> 
   <td>main@158453976</td>   <td></td> </tr>
-<tr bgcolor="94e588">  <td>19/05/17 14:00:36</td>   <td>71010</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExpenseTests.tearDown()[pri:0, instance:tests.ExpenseTests@7c29daf3]">&lt;&lt;tearDown</td> 
+<tr bgcolor="94e588">  <td>19/05/18 15:55:27</td>   <td>69230</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExpenseTests.tearDown()[pri:0, instance:tests.ExpenseTests@7c29daf3]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@158453976</td>   <td></td> </tr>
 </table>
